syntax = "proto3";

package todoPackage;

service Todo {
  rpc CreateTodo(TodoItem) returns (TodoItem) {}
  rpc ReadTodo(ReadTodoItem) returns (TodoItem) {}
  rpc ReadTodos (voidNoParam) returns (TodoItems) {}
  rpc UpdateTodo(TodoItem) returns (TodoItem) {}
  rpc DeleteTodo(ReadTodoItem) returns (TodoItem) {}
}

message voidNoParam {}

message ReadTodoItem {
    int32 id = 1;
  }

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}
